--- a/index.html
+++ b/index.html
@@ -7,5 +7,30 @@
     <link rel="stylesheet" href="styles.css" />
     <title>Portfolio</title>
   </head>
-  <body></body>
+  <body>
+    <header>
+      <nav>
+        <section><img src="#" alt="Profilbild Luise" /></section>
+        <section>
+          <ul>
+            <li>That's me</li>
+            <li>My Motivation</li>
+            <li>Get in touch</li>
+          </ul>
+        </section>
+      </nav>
+
+      <section><h1>Hello there</h1></section>
+      <section><h2>I am Luise Goede</h2></section>
+      <section>
+        <h2>
+          Former Controlling specialist, dance & wine lover, Web Developer in
+          the making
+        </h2>
+      </section>
+    </header>
+
+    <main></main>
+    <footer></footer>
+  </body>
 </html>
