--- a/index.html
+++ b/index.html
@@ -10,24 +10,24 @@
   <body>
     <header>
       <nav>
-        <section><img src="#" alt="Profilbild Luise" /></section>
-        <section>
-          <ul>
-            <li>That's me</li>
-            <li>My Motivation</li>
-            <li>Get in touch</li>
-          </ul>
+        <section class="navbar">
+          <section class="profile">
+            <img
+              src="img/profilbild.jpg"
+              alt="Profilbild Luise"
+              class="profile_img"
+            />
+          </section>
+          <section>
+            <ul class="clickitem">
+              <li>ABOUT ME &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</li>
+              <li>SKILLS &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</li>
+              <li>INTERESTS &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</li>
+              <li>CONTACT</li>
+            </ul>
+          </section>
         </section>
       </nav>
-
-      <section><h1>Hello there</h1></section>
-      <section><h2>I am Luise Goede</h2></section>
-      <section>
-        <h2>
-          Former Controlling specialist, dance & wine lover, Web Developer in
-          the making
-        </h2>
-      </section>
     </header>
 
     <main></main>
