--- a/index.html
+++ b/index.html
@@ -21,8 +21,14 @@
           <section>
             <ul class="clickitem">
               <li>ABOUT ME &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</li>
-              <li>SKILLS &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</li>
-              <li>INTERESTS &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</li>
+              <li>
+                <a href="portfolio/skills.html"></a>SKILLS
+                &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
+              </li>
+              <li>
+                <a href="portfolio/interests.html"></a>INTERESTS
+                &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
+              </li>
               <li>CONTACT</li>
             </ul>
           </section>
@@ -30,7 +36,27 @@
       </nav>
     </header>
 
-    <main></main>
+    <main>
+      <section class="startpage">
+        <section class="intro">
+          <p class="luise">LUISE</p>
+          <p class="goede">GOEDE</p>
+          <p class="introtext">
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. In dolorum
+            illum ullam nihil commodi ipsa perspiciatis asperiores nulla
+            praesentium ducimus culpa voluptatibus repellendus laborum
+            blanditiis dicta maxime nobis, cupiditate quae.Lorem, ipsum dolor
+            sit amet consectetur adipisicing elit. In dolorum illum ullam nihil
+            commodi ipsa perspiciatis asperiores nulla praesentium ducimus culpa
+            voluptatibus repellendus laborum blanditiis dicta maxime nobis,
+            cupiditate quae.
+          </p>
+        </section>
+        <section class="image">
+          <img src="img/mainpicture.jpg" alt="design bild" />
+        </section>
+      </section>
+    </main>
     <footer></footer>
   </body>
 </html>
