--- a/index.html
+++ b/index.html
@@ -57,6 +57,13 @@
         </section>
       </section>
     </main>
-    <footer></footer>
+    <footer>
+      <ul>
+        <li><img src="https://img.icons8.com/ios-glyphs/30/000000/phone--v1.png"/>+49 177 123 456 78</li>
+        <li><a href="https://icons8.com/icon/78406/email">Email icon by Icons8</a><li>
+
+        </li></li>
+      </ul>
+    </footer>
   </body>
 </html>
