--- a/index.html
+++ b/index.html
@@ -58,12 +58,23 @@
       </section>
     </main>
     <footer>
-      <ul>
-        <li><img src="https://img.icons8.com/ios-glyphs/30/000000/phone--v1.png"/>+49 177 123 456 78</li>
-        <li><a href="https://icons8.com/icon/78406/email">Email icon by Icons8</a><li>
-
-        </li></li>
-      </ul>
+      <section class="footer">
+        <ul class="websites">
+          <li>
+            <img src="https://img.icons8.com/ios-glyphs/30/000000/github.png" />
+          </li>
+          <li>
+            <img
+              src="https://img.icons8.com/ios-glyphs/30/000000/linkedin-circled--v1.png"
+            />
+          </li>
+          <li>
+            <img
+              src="https://img.icons8.com/ios-glyphs/30/000000/instagram-new.png"
+            />
+          </li>
+        </ul>
+      </section>
     </footer>
   </body>
 </html>
